--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,92 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    outline: 0;
+    appearance: none;
+    border: none;
+    text-decoration: none;
+    list-style: none;
+    box-sizing: border-box;
+}
+
+html, body {
+    font-size: 16px;
+    height: 100%;
+    background-color: #fffbfb;
+
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 2rem;
+    color: #156064;
+    user-select: none;
+}
+
+/*SCROLLBAR*/
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #FFC2B4;
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #FB8F67;
+    border-radius: 10px;
+}
+
+a {
+    color: #156064;
+}
+
+input[type="text"],
+input[type="password"] {
+    width: 15rem;
+    padding: 10px;
+    margin: 10px 0;
+    font-size: 1rem;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    transition: border-color 0.3s ease;
+    margin:0.5rem;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+    border-color: #156064;
+    outline: none;
+}
+
+button {
+    float: right;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    background-color: #FB8F67;
+    color: #fff;
+    cursor: pointer;
+    box-shadow: 0.2rem 0.2rem 0.5rem rgba(0, 0, 0, 0.2);
+    transition: background-color 0.3s ease;
+    font-family: 'Montserrat', sans-serif;
+    margin: 1rem;
+}
+
+button:hover {
+    background-color: #F8E16C;
+}
